--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -138,11 +138,11 @@
       </div>
 
       <div class="reactionContainer" style="display: none;">
-        <div class="senti">🙂</div>
+        <div class="senti">👍</div>
         <div class="haha">😂</div>
         <div class="sad">😢</div>
         <div class="wow">😮</div>
-        <div class="love">💙</div>
+        <div class="love">❤️</div>
         <div class="angry">😡</div>
       </div>
 
