--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Comic';
-  src: url("./../fonts/font.woff");
+  src: url("./../fonts/comic-sans-webfont.woff2");
 }
 
 :root {
