show react on popup, gzip, longpress scroll, font fix

--- a/public/404.ejs
+++ b/public/404.ejs
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Page not found</title>
 	<link rel="preload" as="image" type="image/gif" href="/images/not-found.gif">
-	<link rel="preload" as="font" type="font/woff2" href="/fonts/comic-sans-webfont.woff2">
+	<link rel="preload" as="font" type="font/woff2" href="/fonts/comic-webfont.woff2">
 	<link rel="preload" as="font" type="font/woff2" href="/fonts/comforter.woff2">
 	<link type="text/css" rel="stylesheet" href="/css/404.css" />
 </head>
@@ -20,7 +20,7 @@
 		}
 		@font-face {
 		font-family: 'Now';
-		src: url('/fonts/comic-sans-webfont.woff2');
+		src: url('/fonts/comic.woff');
 		}
 
 		*{
