--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Comic';
-  src: url("./../fonts/comic-sans-webfont.woff2");
+  src: url("./../fonts/comic-webfont.woff2");
 }
 
 :root {
@@ -62,6 +62,7 @@ body {
   overflow-x: hidden;
   overflow-y: scroll;
   overscroll-behavior-y: contain;
+  font-size: 16px;
 }
 
 .form2 {
@@ -72,7 +73,7 @@ body {
 
 .h3 {
   text-align: center;
-  font-size: 1rem;
+  font-size: 1em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -235,7 +236,7 @@ input[type="radio"]:checked + label img {
 }
 
 #error-callback {
-  font-size: 0.7rem;
+  font-size: 0.7em;
   color: orangered;
   width: 100%;
   word-wrap: break-word;
@@ -264,7 +265,7 @@ input[type="radio"]:checked + label img {
   border-radius: 15px;
   -webkit-backdrop-filter: blur(2px);
           backdrop-filter: blur(2px);
-  font-size: 0.6rem;
+  font-size: 0.6em;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   z-index: 100;
@@ -322,7 +323,7 @@ input[type='button']:focus, input[type='submit']:focus {
   width: 100vw;
   padding: 30px;
   text-align: justify;
-  font-size: 0.7rem;
+  font-size: 0.7em;
   max-width: -webkit-max-content;
   max-width: -moz-max-content;
   max-width: max-content;
@@ -351,7 +352,7 @@ input[type='button']:focus, input[type='submit']:focus {
 }
 
 .line .h1 {
-  font-size: 1rem;
+  font-size: 1em;
   padding: 5px;
   text-align: center;
 }
@@ -362,7 +363,7 @@ input[type='button']:focus, input[type='submit']:focus {
 }
 
 .footer {
-  font-size: 0.6rem;
+  font-size: 0.6em;
   color: #bababa;
   padding: 10px;
 }
