--- a/public/login.ejs
+++ b/public/login.ejs
@@ -46,7 +46,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="preload" as="font" type="font/woff2" href="/fonts/comic-sans-webfont.woff2">
+    <link rel="preload" as="font" type="font/woff2" href="/fonts/comic-webfont.woff2">
     <link rel="stylesheet" href="/css/index.min.css">
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
     <link rel="icon" href="/images/avatars/pikachu.png">
@@ -171,6 +171,6 @@
     </div>
     <script defer src="/socket.io/socket.io.js"></script>
     <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
-    <script defer src="/login.js"></script>
+    <script defer src="/login.min.js"></script>
 </body>
 </html>
