--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -234,10 +234,6 @@
   </div>
   <script defer src="/js/libs/fontawesome.js" crossorigin="anonymous"></script>
   <script defer src="/socket.io/socket.io.js"></script>
-  <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
-  <script defer src="/js/libs/moment.min.js"></script>
-  <script defer src="/js/libs/mustache.min.js"></script>
-  <script defer src="/js/libs/deparam.min.js"></script>
-  <script defer src="/js/chat.min.js"></script>
+  <script defer src="/js/build/chat.js"></script>
 </body>
 </html>
