--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -237,7 +237,6 @@
   <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
   <script defer src="/js/libs/moment.min.js"></script>
   <script defer src="/js/libs/mustache.min.js"></script>
-  <script defer src="/js/libs/deparam.min.js"></script>
-  <script defer src="/js/chat.min.js"></script>
+  <script defer src="/js/src/chat.min.js"></script>
 </body>
 </html>
