--- a/public/create.ejs
+++ b/public/create.ejs
@@ -175,6 +175,6 @@
     </div>
     <script defer src="/socket.io/socket.io.js"></script>
     <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
-    <script defer src="/create.min.js"></script>
+    <script defer src="/js/src/create.min.js"></script>
 </body>
 </html>
