--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -82,10 +82,8 @@
       <div class="chat__main">
         <ol id="messages" class="chat__messages">
           <div class="intro">
-            <h2><img src="./images/avatars/pikachu(custom).png" alt="" srcset="">  PokeTab Messanger <img src="./images/avatars/squirtle(custom).png" alt="" srcset=""> </h2>
-              <p><i class="fa-solid fa-code"></i> <a href="http://itsfuad.netlify.app">Fuad Hasan</a></p>
-              <p><i class="fa-solid fa-user-astronaut"></i> <a href="https://flaticon.com">https://flaticon.com</a></p>
-              <p><i class="fa-solid fa-circle-info"></i> <a href="http://fontawesome.com">http://fontawesome.com</a></p>
+            <img src="/images/msg.png" width="100px" height="100px">
+            <h2>Start typing messages!</h2>
           </div>
         </ol>
         <ul id="typingindicator"></ul>
