--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -289,6 +289,9 @@ input[type=file] {
   color: var(--secondary);
   cursor: pointer;
 }
+.fa-paper-plane{
+  font-size: 2em;
+}
 
 .image {
   display: flex;
