--- a/public/create.ejs
+++ b/public/create.ejs
@@ -48,7 +48,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
     <link rel="preload" as="font" type="font/woff2" href="/fonts/comic-webfont.woff2">
-    <link rel="stylesheet" href="/css/index.min.css">
+    <link rel="stylesheet" href="/css/login.min.css">
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
     <link rel="icon" href="/images/avatars/pikachu.png">
     
