--- a/public/create.ejs
+++ b/public/create.ejs
@@ -171,7 +171,7 @@
     </fieldset>
     <div class="popup-message" style="display: none;"></div>
     <div class="footer">
-        <p>&copy; Copyright Fuad Hasan 2022. All rights reserved. v.4.0.2</p>
+        <p>&copy; Copyright Fuad Hasan 2022. All rights reserved. <%=version%></p>
     </div>
     <script defer src="/socket.io/socket.io.js"></script>
     <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
